fixes footer responsiveness and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ body {
     width: 100%;
     overflow: hidden;
     margin-top: 56px;
+    touch-action: none; /* Disable touch-based scrolling */
 }
 
 .cards {
@@ -378,7 +379,10 @@ body {
         padding: 0;
         min-width: 224px;
         margin: 0 7rem 0 0;
+    }
 
+    .skills-container {
+        padding: 1rem 0 4rem 0;
     }
 
     .work-container {
@@ -398,6 +402,24 @@ body {
         .skills {
             max-width: 600px;
         }
+    }
+
+    .footer {
+        padding: 5.5rem 5rem 4rem 5rem;
+    }
+
+    .interest {
+        font-size: 4rem;
+    } 
+    
+    .chat-container {
+        font-size: 6rem;
+    }
+
+    .socials-container {
+        display: flex;
+        flex-direction: row;
+        gap: 3rem;
     }
 
 }
